edit env for qt6 and qt5 environment viarables in hyprlanc.conf

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -3,7 +3,8 @@
 #################
 $terminal = kitty
 # $fileManager = nautilus
-$fileManager = thunar
+# $fileManager = nautilus
+$fileManager = dolphin 
 $menu = rofi -show drun
 $editor = gnome-text-editor
 $code = code 
@@ -20,7 +21,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, B, exec, $firefox
+bind = $mainMod, F, exec, $firefox
 bind = $mainMod, G, exec, $chrome 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, E, exec, $fileManager
@@ -36,7 +37,7 @@ bind = $mainMod, P, pseudo, # dwindle
 # Apps screen sizes
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, F, fullscreen, 1 # dwindle
+bind = $mainMod, Space, fullscreen, 1 # dwindle
 bind = $mainMod SHIFT, F, fullscreenstate, 0, 3 # dwindle
 bind = $mainMod, equal, resizeactive, -30 0 # Change size active split size
 bind = $mainMod, minus, resizeactive, 30 0 # Change size active split size
@@ -85,6 +86,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Change Workspace mode
+bind = SUPER SHIFT, Space, workspaceopt, allfloat
+bind = SUPER SHIFT, P, workspaceopt, allpseudo
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
