--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,6 +26,7 @@ source = /home/neo/.config/hypr/windowrule.conf
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=eDP-1,1920x1080@59.99700,0x0,1
+monitor=HDMI-A-1,1366x768@59.79000,-1366x0,1
 
 
 ###################
@@ -60,7 +61,8 @@ $menu = wofi --show drun
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME_QT6,qt6ct
 
 
 
@@ -188,6 +190,13 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+
+    disable_splash_rendering = false
+    vfr = true
+    vrr = 1
+    mouse_move_enables_dpms = true
+    mouse_move_focuses_monitor = true
+    enable_swallow = true
 }
 
 
