edit env for qt6 and qt5 environment viarables in hyprlanc.conf

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,29 @@ btop
 Code
 dconf
 Docker Desktop
+dolphinrc
 enchant
+filetypesrc
 gedit
+GIMP
 google-chrome
-gtk-3.0
-gtk-4.0
+kdeglobals
+kde.org
+kiorc
+knfsshare
+kservicemenurc
+ktrashrc
 mimeapps.list
 nwg-look
 pavucontrol.ini
 Postman
 pulse
-rofi
+qt5ct
+qt6ct
+QtProject.conf
+session
 Thunar
+trashrc
+vlc
 xfce4
 xsettingsd
