edit nvim-ts-auto tag dependencie in treesitter.lua in nvim folder

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,6 +28,8 @@ source = /home/neo/.config/hypr/windowrule.conf
 monitor=eDP-1,1920x1080@59.99700,0x0,1
 monitor=HDMI-A-1,1366x768@59.79000,-1366x0,1
 
+# Force workspace 3 on HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
 
 ###################
 ### MY PROGRAMS ###
