edit colorscheme add new background to tokyonight theme make it dark

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,6 @@
 preload = /home/neo/Pictures/Wallpapers/anime_skull.png
-preload = /home/neo/Pictures/Wallpapers/anime_skull.png
-# wallpaper = eDP-1, /home/mera/Pictures/Wallpapers/1.png
+wallpaper = eDP-1, /home/neo/Pictures/Wallpapers/anime_skull.png
+
+# preload = /home/neo/Pictures/Wallpapers/anime_skull.png
 # wallpaper = DP-2, /home/mera/Pictures/Wallpapers/2.png
 ipc = on
