--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -32,4 +32,5 @@ windowrulev2 = size 800 600,title:^(Volume Control)$
 windowrulev2 = idleinhibit focus,class:^(mpv)$
 windowrulev2 = idleinhibit fullscreen,class:^(firefox)$
 
-
+# Remove the blur from the context Menu
+windowrulev2=noblur,class:^()$,title:^()$
