--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,15 +5,19 @@ bold_italic_font auto
 font_size        13
 
 # اختيارية: تخصيص الألوان
-#foreground       #cdd6f4
-#background       #1e1e2e
-#background_opacity 0.7
+# foreground       #cdd6f4
+# background       #1e1e2e
+background_opacity 0.9
 selection_foreground #1e1e2e
 selection_background #89b4fa
 # vim:ft=kitty
+
 
 ## name:     Catppuccin Kitty Mocha
 ## author:   Catppuccin Org
 ## license:  MIT
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
+
+# map Alt+Up    send_text all \x1b[1;3A
+# map Alt+Down  send_text all \x1b[1;3B
