--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -3,6 +3,7 @@ env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+# exec-once = systemctl --user import-environment
 exec-once = ~/.config/hypr/xdg-portal-hyprland # This is a must
 
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
