--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -29,6 +29,7 @@ monitor=eDP-1,1920x1080@59.99700,0x0,1
 monitor=HDMI-A-1,1366x768@59.79000,-1366x0,1
 
 # Force workspace 3 on HDMI-A-1
+workspace = 2, monitor:eDP-1
 workspace = 3, monitor:HDMI-A-1
 
 ###################
