--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -10,7 +10,8 @@ $editor = gnome-text-editor
 $code = code 
 #$menu = wofi --show drun
 $firefox = firefox
-$chrome = google-chrome-stable
+$chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder --enable-zero-copy
+# $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder,WaylandWindowDecorations --enable-zero-copy
 
 ###################
 ### KEYBINDINGS ###
@@ -18,6 +19,15 @@ $chrome = google-chrome-stable
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
+
+
+# Screenhots and video recording
+bind=SUPER, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%F_%T).png
+
+# Screenshot 
+# bind =, print, exec, grim ~/Pictures/Screenshots/$(date +'%s_grim.png')
+# bind = CTRL, print, exec, grim -g "$(slurp -o)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
+# bind = CTRL SHIFT, print, exec, grim -g "$(slurp -o)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
@@ -30,26 +40,33 @@ bind = $mainMod, I, exec, $code
 bind = $mainMod, X, exec, wlogout
 #bind = $mainMode,
 
-bind = $mainMod, C, killactive,
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, P, pseudo, # dwindle
 
+bind = SUPER, Tab, cyclenext,
+bind = SUPER, Tab, bringactivetotop,
+
 # Apps screen sizes
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, fullscreen, 1 # dwindle
 bind = $mainMod SHIFT, F, fullscreenstate, 0, 3 # dwindle
 bind = $mainMod, equal, resizeactive, -30 0 # Change size active split size
 bind = $mainMod, minus, resizeactive, 30 0 # Change size active split size
 
-# Screenhots and video recording
-bind=SUPER, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%F_%T).png
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
+
+# Move focus with mainMod + arrow keys
+# bind = $mainMod, left, movefocus, l
+# bind = $mainMod, right, movefocus, r
+# bind = $mainMod, up, movefocus, u
+# bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -76,8 +93,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, a, togglespecialworkspace, magic
+bind = $mainMod SHIFT, a, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
