--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -2,9 +2,10 @@
 exec-once = systemctl pipewire restart &
 exec-once = /usr/libexec/polkit-mate-authentication-agent-1 &
 exec-once = waybar &
+exec-once = mako &
 exec-once = nm-applet
 exec-once = blueman-applet
-exec-once = Hyprpaper &
+exec-once = hyprpaper &
 exec-once = swaync &
 exec-once = udiskie
 
