--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,6 +1,8 @@
 preload = /home/neo/Pictures/Wallpapers/anime_skull.png
 wallpaper = eDP-1, /home/neo/Pictures/Wallpapers/anime_skull.png
 
-# preload = /home/neo/Pictures/Wallpapers/anime_skull.png
-# wallpaper = DP-2, /home/mera/Pictures/Wallpapers/2.png
+preload = /home/neo/Pictures/Wallpapers/anime_skull.png
+wallpaper = HDMI-A-1, /home/neo/Pictures/Wallpapers/anime_skull.png
+
+
 ipc = on
