add new animation to hyprland.conf file

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,23 +1,11 @@
 font_family      JetBrainsMono Nerd Font
+font_size        13.5
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size        13
-
-# اختيارية: تخصيص الألوان
-# foreground       #cdd6f4
-# background       #1e1e2e
-background_opacity 0.9
-selection_foreground #1e1e2e
-selection_background #89b4fa
-# vim:ft=kitty
-
-
-## name:     Catppuccin Kitty Mocha
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+mouse_hide_wait  2.0
+url_color        #0087bd
+url_style        dotted
 
 # map Alt+Up    send_text all \x1b[1;3A
 # map Alt+Down  send_text all \x1b[1;3B
