--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,6 +18,8 @@ source = /home/neo/.config/hypr/keybinds.conf
 source = /home/neo/.config/hypr/env.conf
 source = /home/neo/.config/hypr/startup.conf
 source = /home/neo/.config/hypr/windowrule.conf
+# Dracula theme
+source = ~/.config/hypr/dracula_colors.conf
 
 
 ################
@@ -163,10 +165,36 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+
+    animation = workspaces, 1, 1.94, easeOutQuint, slide
+    animation = workspacesIn, 1, 1.21, easeOutQuint, slide
+    animation = workspacesOut, 1, 1.94, easeOutQuint, slide
+
+    # animation = workspaces, 1, 1.94, almostLinear, fade
+    # animation = workspacesIn, 1, 1.21, almostLinear, fade
+    # animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
+
+
+# animations {
+#     enabled = yes
+#
+#     bezier = easeOutQuint,0.23,1,0.32,1
+#
+#     animation = global, 1, 10, default
+#     animation = border, 1, 5, easeOutQuint
+#     animation = windows, 1, 4.5, easeOutQuint
+#     animation = windowsIn, 1, 3.5, easeOutQuint, slidefade
+#     animation = windowsOut, 1, 2.0, easeOutQuint, slidefade
+#     animation = fadeIn, 1, 1.5, easeOutQuint
+#     animation = fadeOut, 1, 1.5, easeOutQuint
+#     animation = layers, 1, 3, easeOutQuint
+#     animation = layersIn, 1, 4, easeOutQuint, fade
+#     animation = layersOut, 1, 1.5, linear, fade
+#     animation = workspaces, 1, 2.5, easeOutQuint, slide
+# }
+
+
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
