--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -18,6 +18,9 @@ windowrulev2 = float,title:^(branchdialog)$
 windowrulev2 = float,title:^(Confirm to replace files)
 windowrulev2 = float,title:^(File Operation Progress)
 
+windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
+windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
+
 # Workspace
 # windowrulev2 = workspace 1, class:^(firefox)$
 # windowrulev2 = workspace 2, class:^(dolphin)$
