edit the lsp-config file to disable messages in the lines and add systemd service to start the gnome-keyring service

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -2,9 +2,8 @@
 ### VARIABLES ###
 #################
 $terminal = kitty
-# $fileManager = nautilus
-# $fileManager = nautilus
-$fileManager = dolphin 
+# $fileManager = dolphin 
+$fileManager = thunar 
 $menu = rofi -show drun
 $editor = gnome-text-editor
 $code = code 
