--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -1,8 +1,9 @@
 # Opacity
-# windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
-# windowrulev2 = opacity 0.90 0.90,class:^(kitty)
 # windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
-# windowrulev2 = opacity 0.80 0.80,class:^(dolphin)$
+windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
+windowrulev2 = opacity 0.80 0.80,class:^(dolphin)$
+windowrulev2 = opacity 0.90 0.90,class:^(kitty)
+windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 
 # Position
 # windowrulev2 = float,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
@@ -18,8 +19,6 @@ windowrulev2 = float,title:^(branchdialog)$
 windowrulev2 = float,title:^(Confirm to replace files)
 windowrulev2 = float,title:^(File Operation Progress)
 
-windowrulev2 = opacity 0.8 0.8,class:^(dolphin)$
-windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 
 # Workspace
 # windowrulev2 = workspace 1, class:^(firefox)$
