--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,18 @@
+include ./mocha.conf
+
 font_family      JetBrainsMono Nerd Font
 font_size        13.5
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
 mouse_hide_wait  2.0
+curosr_shape     block
 url_color        #0087bd
 url_style        dotted
+
+mouse_hide_wait  2.0
+background_opacity 0.95
 
 # map Alt+Up    send_text all \x1b[1;3A
 # map Alt+Down  send_text all \x1b[1;3B
