--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -127,8 +127,9 @@ decoration {
         enabled = true
         size = 6
         passes = 3
-
         vibrancy = 0.1696
+
+        new_optimizations = on
     }
 }
 
@@ -158,7 +159,8 @@ animations {
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
 
-    animation = workspaces, 1, 1.94, easeOutQuint, slide
+    animation = workspaces, 1, 1.94, almostLinear, fade
+# animation = workspaces, 1, 1.94, easeOutQuint, slide
     animation = workspacesIn, 1, 1.21, easeOutQuint, slide
     animation = workspacesOut, 1, 1.94, easeOutQuint, slide
 
