--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -2,15 +2,15 @@
 ### VARIABLES ###
 #################
 $terminal = kitty
-# $fileManager = dolphin 
-$fileManager = thunar 
+# $fileManager = thunar 
+$fileManager = nautilus
 $menu = rofi -show drun
 $editor = gnome-text-editor
 $code = code 
 #$menu = wofi --show drun
 $firefox = firefox
 $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder --enable-zero-copy
-# $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder,WaylandWindowDecorations --enable-zero-copy
+#--password-store=gnome-libsecret
 
 ###################
 ### KEYBINDINGS ###
