--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -1,11 +1,10 @@
 # Startup
-exec-once = systemctl pipewire restart &
-exec-once = /usr/libexec/polkit-mate-authentication-agent-1 &
-exec-once = waybar &
-exec-once = mako &
+exec-once = systemctl pipewire restart
+exec-once = waybar
+exec-once = mako
 exec-once = nm-applet
 exec-once = blueman-applet
-exec-once = hyprpaper &
-exec-once = swaync &
+exec-once = hyprpaper
+exec-once = swaync
 exec-once = udiskie
 
