--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -4,6 +4,7 @@ windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
 windowrulev2 = opacity 0.80 0.80,class:^(dolphin)$
 windowrulev2 = opacity 0.90 0.90,class:^(kitty)
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
+windowrulev2 = opacity 0.90, class:^(org.gnome.Nautilus)$
 
 # Position
 # windowrulev2 = float,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
@@ -19,6 +20,8 @@ windowrulev2 = float,title:^(branchdialog)$
 windowrulev2 = float,title:^(Confirm to replace files)
 windowrulev2 = float,title:^(File Operation Progress)
 
+# Nautilus Save File or open files
+windowrulev2 = float,center,class:^(xdg-desktop-portal-gtk)$
 
 # Workspace
 # windowrulev2 = workspace 1, class:^(firefox)$
