add move windows with super shift h j k l in hyprland.conf

--- a/.gitignore
+++ b/.gitignore
@@ -8,27 +8,24 @@ configstore
 create-next-app-nodejs
 dconf
 Docker Desktop
-dolphinrc
 enchant
 filetypesrc
 fontconfig
-foot
 gedit
 GIMP
+gnome-keyring
 google-chrome
 gtk-3.0
 gtk-4.0
 inngest
-kdeglobals
-kde.org
 kiorc
 knfsshare
-kservicemenurc
 ktrashrc
 mimeapps.list
 nautilus
 nextjs-nodejs
 nwg-look
+obsidian
 pavucontrol.ini
 Postman
 pulse
