--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -10,7 +10,6 @@ $code = code
 #$menu = wofi --show drun
 $firefox = firefox
 $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder --enable-zero-copy
-#--password-store=gnome-libsecret
 
 ###################
 ### KEYBINDINGS ###
@@ -18,7 +17,6 @@ $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzo
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
-
 
 # Screenhots and video recording
 bind=SUPER, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%F_%T).png
@@ -59,6 +57,11 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
