--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -1,4 +1,6 @@
 # Startup
+exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets,pkcs11,ssh,gpg
+exec-once = /usr/libexec/polkit-mate-authentication-agent-1
 exec-once = systemctl pipewire restart
 exec-once = waybar
 exec-once = mako
