modifie hypr and waybar

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -3,7 +3,7 @@
 #################
 $terminal = kitty
 # $fileManager = thunar 
-$fileManager = nautilus
+$fileManager = nautilus -w
 $menu = rofi -show drun
 $editor = gnome-text-editor
 $code = code 
@@ -19,12 +19,9 @@ $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzo
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Screenhots and video recording
-bind=SUPER, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%F_%T).png
-
-# Screenshot 
-# bind =, print, exec, grim ~/Pictures/Screenshots/$(date +'%s_grim.png')
-# bind = CTRL, print, exec, grim -g "$(slurp -o)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
-# bind = CTRL SHIFT, print, exec, grim -g "$(slurp -o)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
+# bind=SUPER, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%F_%T).png
+bind =, Print, exec, grim ~/Pictures/Screenshots/$(date +'%s_grim.png')
+bind = $mainMod, Print, exec, grim -g "$(slurp -o)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
@@ -40,24 +37,30 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, P, pseudo, # dwindle
 
-bind = SUPER, Tab, cyclenext,
-bind = SUPER, Tab, bringactivetotop,
+bind = $mainMod, Tab, cyclenext,
+bind = $mainMod, Tab, bringactivetotop,
 
-# Apps screen sizes
+# Waybar kill and launach it again
+bind = $mainMod, W, exec, pkill waybar && waybar
+
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, fullscreen, 1 # dwindle
 bind = $mainMod SHIFT, F, fullscreenstate, 0, 3 # dwindle
-bind = $mainMod, equal, resizeactive, -30 0 # Change size active split size
-bind = $mainMod, minus, resizeactive, 30 0 # Change size active split size
 
+# Apps screen sizes
+bind = $mainMod, left, resizeactive, -30 0 # Change size active split size
+bind = $mainMod, right, resizeactive, 30 0 # Change size active split size
+bind = $mainMod, up, resizeactive, 0 -30 # Change size active split size
+bind = $mainMod, down, resizeactive, 0 30 # Change size active split size
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + H:Left J:Down K:Up L:Right 
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+# Move window with mainMod + H:Left J:Down K:Up L:Right 
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
