--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -1,13 +1,12 @@
 env = XDG_CURRENT_DESKTOP, Hyprland
 env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
+env = SSH_AUTH_SOCK
 
 # Core components (authentication, lock screen, notification daemon)
+# exec-once = dbus-update-activation-environment --systemd DISPLAY XAUTHORITY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dbus-update-activation-environment --all
-exec-once = dbus-update-activation-environment --systemd DISPLAY XAUTHORITY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ~/.config/hypr/xdg-portal-hyprland # This is a must
-
-# exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = MOZ_ENABLE_WAYLAND,1
