--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,37 +1,36 @@
 // -*- mode: jsonc -*-
 {
     "layer": "top",
-    // "position": "bottom", // Waybar position (top|bottom|left|right)
+    "position": "top", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
 
     "include": [
-    "~/.config/waybar/modules.json"
+      "~/.config/waybar/modules.json"
     ],
 
     "modules-left": [
       "hyprland/workspaces",
-    "hyprland/window"
+      "hyprland/window"
       // "sway/mode",
       // "sway/scratchpad"
     ],
     "modules-center": [
-
     ],
     "modules-right": [
-      "idle_inhibitor",
-      "custom/power",
+      // "cpu",
+      // "memory",
+      // "temperature",
+      "hyprland/language",
       "pulseaudio",
       "network",
       "power-profiles-daemon",
-      "cpu",
-      "memory",
-      "temperature",
       "backlight",
-      "sway/language",
       "battery",
       "clock",
-      "tray"
+      "tray",
+      "idle_inhibitor",
+      "custom/power"
     ],
 }
