--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,6 +57,7 @@ workspace = 3, monitor:HDMI-A-1
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_THEME,"McMojave Cursors"
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_QPA_PLATFORMTHEME_QT6,qt6ct
