--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,6 +3,7 @@
     "layer": "top",
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
+    // "mode": "dock",
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
 
@@ -30,7 +31,7 @@
       "battery",
       "clock",
       "tray",
-      "idle_inhibitor",
+      // "idle_inhibitor",
       "custom/power"
     ],
 }
