edit the styles.css and hyprland.conf to make scroll naturl to true

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -20,6 +20,7 @@
     "modules-center": [
     ],
     "modules-right": [
+      // "wlr/taskbar",
       // "cpu",
       // "memory",
       // "temperature",
@@ -33,5 +34,5 @@
       "tray",
       // "idle_inhibitor",
       "custom/power"
-    ],
+    ]
 }
