--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,7 +57,7 @@ workspace = 3, monitor:HDMI-A-1
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
-# env = HYPRCURSOR_THEME,"McMojave Cursors"
+env = HYPRCURSOR_THEME,"McMojave-cursors"
 env = HYPRCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_QPA_PLATFORMTHEME_QT6,qt6ct
@@ -215,7 +215,7 @@ master {
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 
     disable_splash_rendering = false
     vfr = true
@@ -243,13 +243,13 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
