smoe edits on dontfiles

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -109,7 +109,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 5
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -126,11 +126,12 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 6
-        passes = 3
+        size = 5
+        passes = 2
         vibrancy = 0.1696
-
         new_optimizations = on
+        # ignore_opacity = false
+
     }
 }
 
