--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
-preload = /home/neo/Pictures/Wallpapers/anime_skull.png
-wallpaper = eDP-1, /home/neo/Pictures/Wallpapers/anime_skull.png
+preload = /home/neo/Pictures/Wallpapers/city-skyline-sunset-car-anime.webp
+wallpaper = eDP-1, /home/neo/Pictures/Wallpapers/city-skyline-sunset-car-anime.webp
 
-preload = /home/neo/Pictures/Wallpapers/anime_skull.png
-wallpaper = HDMI-A-1, /home/neo/Pictures/Wallpapers/anime_skull.png
+preload = /home/neo/Pictures/Wallpapers/city-skyline-sunset-car-anime.webp
+wallpaper = HDMI-A-1, /home/neo/Pictures/Wallpapers/city-skyline-sunset-car-anime.webp
 
 
 ipc = on
