--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,7 +7,7 @@ italic_font      auto
 bold_italic_font auto
 
 mouse_hide_wait  2.0
-curosr_shape     block
+curosr_shape     beam
 url_color        #0087bd
 url_style        dotted
 
