--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,7 +5,7 @@
     "height": 30, // Waybar height (to be removed for auto height)
     // "mode": "dock",
     // "width": 1280, // Waybar width
-    "spacing": 4, // Gaps between modules (4px)
+    "spacing": 3, // Gaps between modules (4px)
 
     "include": [
       "~/.config/waybar/modules.json"
@@ -33,6 +33,7 @@
       "clock",
       "tray",
       // "idle_inhibitor",
+      "custom/notification",
       "custom/power"
     ]
 }
