add delay speed to hyprland.conf

--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -1,8 +1,9 @@
 # startup.conf
-exec-once = /usr/libexec/polkit-mate-authentication-agent-1
-exec-once = systemctl pipewire restart
-exec-once = waybar
 # exec-once = mako
+# exec-once = systemctl pipewire restart
+exec-once = /usr/libexec/polkit-mate-authentication-agent-1
+exec-once = eval $(/usr/bin/gnome-keyring-daemon --components=pkcs11,secrets,ssh,gpg --start)
+exec-once = waybar
 exec-once = swaync
 exec-once = nm-applet
 exec-once = blueman-applet
