--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,7 +7,8 @@ italic_font      auto
 bold_italic_font auto
 
 mouse_hide_wait  2.0
-curosr_shape     beam
+cursor_shape     beam
+disable_ligatures cursor
 url_color        #0087bd
 url_style        dotted
 
