--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,7 +3,7 @@
     "layer": "top",
     "position": "top", // Waybar position (top|bottom|left|right)
     "height": 30, // Waybar height (to be removed for auto height)
-    // "mode": "dock",
+    "mode": "dock",
     // "width": 1280, // Waybar width
     "spacing": 3, // Gaps between modules (4px)
 
