--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -2,19 +2,18 @@
 ### VARIABLES ###
 #################
 $terminal = kitty
-# $fileManager = thunar 
+$firefox = zen #firefox
 $fileManager = nautilus -w
 $menu = rofi -show drun
 $editor = gnome-text-editor
 $code = code 
-#$menu = wofi --show drun
-$firefox = firefox
 $chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder --enable-zero-copy
+#$menu = wofi --show drun
+# $fileManager = thunar 
 
 ###################
 ### KEYBINDINGS ###
 ###################
-
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
@@ -34,7 +33,7 @@ bind = $mainMod, I, exec, $code
 bind = $mainMod, X, exec, wlogout
 
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+# bind = $mainMod, M, exit,
 bind = $mainMod, P, pseudo, # dwindle
 
 bind = $mainMod, Tab, cyclenext,
@@ -48,11 +47,6 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, fullscreen, 1 # dwindle
 bind = $mainMod SHIFT, F, fullscreenstate, 0, 3 # dwindle
 
-# Apps screen sizes
-bind = $mainMod, left, resizeactive, -30 0 # Change size active split size
-bind = $mainMod, right, resizeactive, 30 0 # Change size active split size
-bind = $mainMod, up, resizeactive, 0 -30 # Change size active split size
-bind = $mainMod, down, resizeactive, 0 30 # Change size active split size
 
 # Move focus with mainMod + H:Left J:Down K:Up L:Right 
 bind = $mainMod, h, movefocus, l
@@ -66,11 +60,11 @@ bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
 
-# Move focus with mainMod + arrow keys
-# bind = $mainMod, left, movefocus, l
-# bind = $mainMod, right, movefocus, r
-# bind = $mainMod, up, movefocus, u
-# bind = $mainMod, down, movefocus, d
+# Apps screen sizes
+bind = $mainMod, left, resizeactive, -30 0 # Change size active split size
+bind = $mainMod, right, resizeactive, 30 0 # Change size active split size
+bind = $mainMod, up, resizeactive, 0 -30 # Change size active split size
+bind = $mainMod, down, resizeactive, 0 30 # Change size active split size
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
