--- a/hypr/windowrule.conf
+++ b/hypr/windowrule.conf
@@ -1,9 +1,12 @@
 # Opacity
 
 # windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
-windowrulev2 = opacity 0.90 0.90, class:^(firefox)$
-windowrulev2 = opacity 0.80 0.80,class:^(dolphin)$
+# windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
+# windowrulev2 = opacity 0.90 0.90,class:^(zen)$
+# windowrulev2 = opacity 0.90 0.90,class:^(obsidian)$
+windowrulev2 = opacity 0.90 0.90,class:^(dolphin)$
 windowrulev2 = opacity 0.90 0.90,class:^(kitty)
+windowrulev2 = opacity 0.90 0.90,class:^(gedit)
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = opacity 0.90,class:^(org.gnome.Nautilus)$
 
