add brave launch in keybinds to hypr

--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -7,7 +7,8 @@ $fileManager = nautilus -w
 $menu = rofi -show drun
 $editor = gnome-text-editor
 $code = code 
-$chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder --enable-zero-copy
+$chrome = google-chrome-stable --ozone-platform=wayland --enable-features=UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder --enable-zero-copy --ignore-gpu-blocklist
+$brave = flatpak run com.brave.Browser &
 #$menu = wofi --show drun
 # $fileManager = thunar 
 
@@ -30,6 +31,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, T, exec, $editor
 bind = $mainMod, I, exec, $code
+bind = $mainMod, B, exec, $brave
 bind = $mainMod, X, exec, wlogout
 
 bind = $mainMod, Q, killactive,
