--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -228,6 +228,8 @@ input {
 
     touchpad {
         natural_scroll = true
+        # disable_while_typing = true
+
     }
 }
 
@@ -239,7 +241,8 @@ cursor {
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = true
+
+   gesture = 3, horizontal, workspace
 }
 
 # Example per-device config
@@ -248,18 +251,6 @@ device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
-
-
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
