--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -1,6 +1,6 @@
 # startup.conf
 # exec-once = mako
-# exec-once = systemctl pipewire restart
+exec-once = systemctl pipewire restart
 exec-once = /usr/libexec/polkit-mate-authentication-agent-1
 exec-once = eval $(/usr/bin/gnome-keyring-daemon --components=pkcs11,secrets,ssh,gpg --start)
 exec-once = waybar
